@@ -395,6 +395,7 @@
 <br><samp>&nbsp;&nbsp;&nbsp;numbered,&nbsp;but&nbsp;need&nbsp;not&nbsp;start&nbsp;at&nbsp;1</samp>
 <br><samp>&nbsp;&nbsp;&nbsp;(although&nbsp;not&nbsp;all&nbsp;formatters&nbsp;will</samp>
 <br><samp>&nbsp;&nbsp;&nbsp;honour&nbsp;the&nbsp;first&nbsp;index).</samp>
+<br><samp>#.&nbsp;This&nbsp;item&nbsp;is&nbsp;auto-enumerated</samp>
       <td>Enumerated lists:
         <ol type="1">
           <li value="3">This is the first item
@@ -404,6 +405,7 @@
           <li>List items should be sequentially numbered,
         but need not start at 1 (although not all
         formatters will honour the first index).
+          <li>This item is auto-enumerated
         </ol>
     </table>
 
